--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "file-saver": "^2.0.5",
     "fontkit": "^2.0.2",
     "gapi-script": "^1.2.0",
+    "jszip": "^3.10.1",
     "jwt-decode": "^4.0.0",
     "pdf-lib": "^1.17.1",
     "primereact": "^10.5.1",
