--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.8",
     "file-saver": "^2.0.5",
     "fontkit": "^2.0.2",
     "gapi-script": "^1.2.0",
@@ -28,6 +29,7 @@
     "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
     "react-file-icon": "^1.4.0",
