--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
+    "serve": "^14.2.4",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
@@ -54,8 +55,8 @@
       "react-app/jest"
     ],
     "rules": {
-    "no-unused-vars": "warn"
-  }
+      "no-unused-vars": "warn"
+    }
   },
   "browserslist": {
     "production": [
