--- a/client/package.json
+++ b/client/package.json
@@ -31,9 +31,11 @@
     "react-animations": "^1.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-css-modules": "^4.7.11",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.2.0",
     "react-file-icon": "^1.4.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
