--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "react-toastify": "^10.0.4",
     "redux-persist": "^6.0.0",
     "tailwindcss": "^3.4.1",
